fix cookie link https://github.com/ALASdoo/alasdoo_com_v2/issues/180
fix 'Contact us' menu item not visible:
https://github.com/ALASdoo/alasdoo_com_v2/issues/112

fix About us spacing too big

--- a/assets/scss/_form.scss
+++ b/assets/scss/_form.scss
@@ -114,15 +114,6 @@ form label {
   @extend .text-dark;
 }
 
-// list-unstyled
-.list-unstyled {
-  li {
-    margin-bottom: 0.8rem;
-    &::before {
-      content: none !important;
-    }
-  }
-}
 
 // check-mark
 .check-mark {
