--- a/assets/scss/_typography.scss
+++ b/assets/scss/_typography.scss
@@ -136,7 +136,8 @@ $type-levels: 6, 5, 4, 3, 2, 1;
 .form-success,
 .cookies-page,
 .single-page,
-.regular-page {
+.regular-page,
+.case-studies {
   margin-bottom: 5rem;
   
   h1,
@@ -178,6 +179,17 @@ $type-levels: 6, 5, 4, 3, 2, 1;
     font-size: 18px;
   }
 
+  .content {
+    ul {
+      ul {
+        margin-top: 0.8rem;
+      }
+  
+      li:before {
+        top: 10px;
+      }
+    }
+  }
 }
 
  
