--- a/themes/bigspring/assets/scss/_common.scss
+++ b/themes/bigspring/assets/scss/_common.scss
@@ -258,6 +258,9 @@ form label {
 .list-unstyled {
   li {
     margin-bottom: 0.8rem;
+    &::before {
+      content: none;
+    }
   }
 }
 
